# grasp_doremus

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  grasp_list_10_performers_json.txt  grasp_mozart.txt  grasp_mozart_5.txt  grasp_mozart_with_gold_answer.txt  grasp_qlever_test.txt  mozart_gold.rq  pyproject.toml  run.py  run_doremus_batch.py  split_grasp_results.py
apps/evaluation/: app.py
apps/grasp/: Dockerfile  nginx.conf  svelte.config.js
apps/grisp/: Dockerfile  README.md  nginx.conf  svelte.config.js
apps/website/: Dockerfile  svelte.config.js
configs/: doremus_notes.json  judge.yaml  run.yaml  run_vllm.yaml  serve.yaml
configs/grisp/: run.yaml  server.yaml  train.yaml
configs/notes/: explore.yaml  outputs.yaml  samples.yaml
output/Qwen3-30B-A3B-Instruct-2507/json/: 0001_Which works have been composed by Mozart ?.json  0002_Which works have been composed in 1836 ?.json  0003_Which works have been written for string quartet?.json  0004_What works are linked to a particular work and what type of link connect them?.json  0005_Retrieve all the works that have been written by German composers between 1800 and 1850 and performed at the Royal Albert Hall.json  0006_Give me the works written for oboe and orchestra after the 1900.json  0007_Give me the works written for violin, clarinet and piano (strictly).json  0008_Give me the works of suite genre that involves at least violin, clarinet and piano.json  0009_Give me the works of chamber genre that involves at most violin, clarinet and piano.json  0011_Give me all the mélodies (French art songs) for baritone voice between 1870 and 1913..json  0012_Give me all titles of chamber opera that foresee at least one cello.json  0013_Give me all the sacred vocal music for choir written since 1945.json  0014_Give me all the operas of which the composer is also the librettist.json  0015_Give me a list of mélodies (French art songs) from the 20th century.json  0016_Give me a list of works of genre sonata composed in the 19th century by Norwegian composers.json  0017_Give me the list of the works of which at least one of the dedicatees is also a performer of the work.json  (+47 more)
output/Qwen3-4B-Instruct-2507/: all_results.json
queries/: freebase.entity.info.sparql  freebase.property.info.sparql  wikidata.entity.index.multilingual.sparql  wikidata.entity.index.sparql  wikidata.property.index.sparql
scripts/: run_text2sparql_grasp_proxy.py  spinach_json_to_jsonl.py
src/grasp/: __init__.py  cli.py  configs.py  core.py  evaluate.py  functions.py  model.py  server.py  utils.py
(+296 files in other folders)
