[project]
name = "grasp-rdf"
version = "0.3.0"
description = "GRASP: Generic Reasoning and SPARQL generation across knowledge graphs"
authors = [{ name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }]
readme = "README.md"
requires-python = ">=3.12"

keywords = ["rdf", "llm", "sparql", "question answering", "knowledge graph"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]

dependencies = [
  # grasp core
  "pydantic>=2.9.0",
  "litellm>=1.65",
  "tenacity>=9.0.0",
  # utils
  "requests>=2.32.0",
  "tqdm>=4.65.0",
  "validators>=0.34.0",
  "scipy>=1.15.0",
  "universal-ml-utils>=0.1.3",
  "grammar-utils>=0.1.3",
  "search-index>=0.4.2",
  # server
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "websockets>=14.0",
]

[project.optional-dependencies]
# if you want to rebuild the benchmark datasets, see scripts/prepare_benchmark.py,
# scripts/extract_uniprot_examples.py, and scripts/fix_uniprot_examples.py
data = ["datasets>=3.3.0", "beautifulsoup4>=4.12.0"]

[project.scripts]
"grasp" = "grasp.cli:main"

[project.urls]
Github = "https://github.com/ad-freiburg/grasp"
