[project]
name = "grasp-rdf"
version = "0.7.0"
description = "GRASP: Generic Reasoning and SPARQL generation across knowledge graphs"
authors = [{ name = "Sebastian Walter", email = "swalter@cs.uni-freiburg.de" }]
readme = "README.md"
requires-python = ">=3.12"

keywords = ["rdf", "llm", "sparql", "question answering", "knowledge graph"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]

dependencies = [
  # core
  "pydantic>=2.9.0",
  "openai>=2.6.0",
  # utils
  "requests>=2.32.0",
  "tqdm>=4.65.0",
  "scipy>=1.15.0",
  "universal-ml-utils>=0.1.5",
  "grammar-utils>=0.1.6",
  "search-rdf>=0.5.2",
  # server
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "websockets>=14.0",
]

[project.optional-dependencies]
# if you want to rebuild the benchmark datasets, see scripts/prepare_benchmark.py,
# scripts/extract_uniprot_examples.py, and scripts/fix_uniprot_examples.py
data = ["datasets>=3.3.0", "beautifulsoup4>=4.12.0"]
grisp = ["transformers>=5", "wandb>=0.24.0", "peft>=0.15.0"]

[project.scripts]
"grasp" = "grasp.cli:main"

[project.urls]
Github = "https://github.com/ad-freiburg/grasp"
